Fix title size on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,15 +54,16 @@ header.home {
         text-shadow: 0px 3px 1px black;
     }
 
-    @include media-query(612px) {
+    @include media-query(665px) {
         & {
-            font-size: 2.9em;
+            font-size: 2.6em;
         }
     }
 
     @include media-query($on-palm) {
         & {
             bottom: 170px;
+            font-size: 8vw;
         }
     }
 }
